fixed header spacing

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -17,3 +17,7 @@
     background-color: #002e5a;
     color: white;
     border-bottom: 1px solid #cfd8dc;}
+
+    .sidebar-nav{
+      padding-top:10px;
+    }
